# django-graph-auth

./: .gitignore  LICENSE  MANIFEST.in  README.rst  ReadMe.md  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
docs/: index.md
graph_auth/: __init__.py  admin.py  apps.py  base.py  constants.py  models.py  schema.py  settings.py  shortcuts.py  signals.py  utils.py
graph_auth/graphql/: base.py  inputs.py
graph_auth/migrations/: 0001_initial.py
requirements/: base.txt  dev.txt
testproject/: asgi.py  schema.py  settings.py  tasks.py  urls.py  wsgi.py
testproject/testproject/: settings.py
