[metadata]
name = django-graph-auth
version = 0.1
description = A Django GraphQL App for Authentication
long_description = file: README.rst
url = https://github.com/itzomen/django-graph-auth
author = Peng Boris Akebuon
author_email = peng@traleor.com
license = MIT 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.0  # Replace "X.Y" as appropriate

[aliases]
test=pytest

[bdist_wheel]
universal=1

[coverage:run]
omit = */tests/*

[isort]
known_first_party=graph_auth,
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
exclude = setup.py,docs/*,testproject/*,tests,quickstart/
max-line-length = 88
extend-ignore = E203
ignore = apps.py F401, utils.py W503
